[package]
name = "abandoned"
version = "0.1.0"
authors = ["Erin Moon <erin@hecke.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbfreader = "0.13.4"
regex = "1.3.4"
ron = "0.5.1"
structopt = "0.3.11"
maud = "0.21.0"
rusqlite = "0.21.0"
log = "0.4.8"
env_logger = "0.7.1"
bloom = "0.3.2"
